--- a/Source/Pekspro.RadioStorm.MAUI/Pages/Favorite/FavoritesPage.xaml
+++ b/Source/Pekspro.RadioStorm.MAUI/Pages/Favorite/FavoritesPage.xaml
@@ -9,11 +9,17 @@
              xmlns:c="clr-namespace:Pekspro.RadioStorm.MAUI.Controls"
              xmlns:views="clr-namespace:Pekspro.RadioStorm.MAUI.Views"
              xmlns:settingsvm="clr-namespace:Pekspro.RadioStorm.UI.ViewModel.Settings;assembly=Pekspro.RadioStorm.UI"
+             xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
              xmlns:r="clr-namespace:Pekspro.RadioStorm.UI.Resources;assembly=Pekspro.RadioStorm.UI"
              x:Class="Pekspro.RadioStorm.MAUI.Pages.Favorite.FavoritesPage"
              x:DataType="vm:FavoritesViewModel"
              Title="{x:Static r:Strings.Favorites_Title}"
              >
+    <ContentPage.Behaviors>
+        <toolkit:StatusBarBehavior 
+            StatusBarColor="{AppThemeBinding Dark={StaticResource PanelBackgroundDark}, Light={StaticResource PanelBackgroundLight}}" 
+            StatusBarStyle="{AppThemeBinding Dark={StaticResource LightContent}, Default=DarkContent}"/>
+    </ContentPage.Behaviors>
     <ContentPage.Resources>
         <ResourceDictionary>
             <DataTemplate x:DataType="cm:ChannelModel" x:Key="ChannelTemplate">
