Moves download button on current playing page.

--- a/Source/Pekspro.RadioStorm.MAUI/App.xaml
+++ b/Source/Pekspro.RadioStorm.MAUI/App.xaml
@@ -218,6 +218,7 @@
 
             <Style x:Key="InlineHyperlinkButton" TargetType="Button" BasedOn="{StaticResource HyperlinkButton}">
                 <Setter Property="HeightRequest" Value="16" />
+                <Setter Property="FontSize" Value="{StaticResource FontSizeDetails}" />
                 <Setter Property="Padding" Value="0" />
                 <Setter Property="Margin" Value="-4,0,0,0" />
             </Style>
