Adds context menu on episode list.

--- a/Source/Pekspro.RadioStorm.MAUI/App.xaml
+++ b/Source/Pekspro.RadioStorm.MAUI/App.xaml
@@ -379,6 +379,7 @@
             <converters:AndConverter x:Key="AndConverter" />
             <converters:OrConverter x:Key="OrConverter" />
             <converters:LargerThanZeroConverter x:Key="LargerThanZeroConverter" />
+            <converters:ToggleDownloadStringConverter x:Key="ToggleDownloadStringConverter" />
 
             <converters:DownloadDataStatusToVisibilityConverter VisibilityValue="Done"
                                                             x:Key="DownloadDataStatusDoneToVisibilityConverter" />
