--- a/Source/Pekspro.RadioStorm.MAUI/Pages/Episode/DownloadsPage.xaml
+++ b/Source/Pekspro.RadioStorm.MAUI/Pages/Episode/DownloadsPage.xaml
@@ -41,8 +41,14 @@
                     </SwipeView.RightItems>
                     <FlyoutBase.ContextFlyout>
                         <MenuFlyout>
-                            <MenuFlyoutItem Text="{x:Static r:Strings.General_AddToPlayList}" 
-                                            Command="{Binding AddToPlayListCommand}" />
+                            <MenuFlyoutItem Command="{Binding TogglePlayListCommand}">
+                                <MenuFlyoutItem.Text>
+                                    <MultiBinding Converter="{StaticResource TogglePlaylistStringConverter}">
+                                        <Binding Path="CanBeAddedToPlayList" />
+                                        <Binding Path="CanBeRemovedFromPlayList" />
+                                    </MultiBinding>
+                                </MenuFlyoutItem.Text>
+                            </MenuFlyoutItem>
                             <MenuFlyoutItem Command="{Binding ToggleDownloadCommand}">
                                 <MenuFlyoutItem.Text>
                                     <MultiBinding Converter="{StaticResource ToggleDownloadStringConverter}">
@@ -68,8 +74,14 @@
                 <Grid>
                     <FlyoutBase.ContextFlyout>
                         <MenuFlyout>
-                            <MenuFlyoutItem Text="{x:Static r:Strings.General_AddToPlayList}" 
-                                        Command="{Binding AddToPlayListCommand}" />
+                            <MenuFlyoutItem Command="{Binding TogglePlayListCommand}">
+                                <MenuFlyoutItem.Text>
+                                    <MultiBinding Converter="{StaticResource TogglePlaylistStringConverter}">
+                                        <Binding Path="CanBeAddedToPlayList" />
+                                        <Binding Path="CanBeRemovedFromPlayList" />
+                                    </MultiBinding>
+                                </MenuFlyoutItem.Text>
+                            </MenuFlyoutItem>
                             <MenuFlyoutItem Command="{Binding ToggleDownloadCommand}">
                                 <MenuFlyoutItem.Text>
                                     <MultiBinding Converter="{StaticResource ToggleDownloadStringConverter}">
